--- a/app/src/main/res/menu/menu_music_jockey.xml
+++ b/app/src/main/res/menu/menu_music_jockey.xml
@@ -3,5 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.play4u.mobile.MusicJockeyActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+        android:orderInCategory="100"  />
 </menu>
