--- a/app/src/main/res/values/web_settings.xml
+++ b/app/src/main/res/values/web_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="web_server_base_url">http://192.168.43.43:4567</string>
-    <string name="ping_route">/ping</string>
+    <string name="ping_base_route">/ping</string>
+    <string name="listener_base_route">/listeners</string>
 </resources>
