--- a/app/src/main/res/values/app_settings.xml
+++ b/app/src/main/res/values/app_settings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_listener">ListenerActivity</string>
     <string name="title_activity_music_jockey">MusicJockeyActivity</string>
     <string name="title_activity_listener_settings">Settings</string>
+    <string name="title_activity_loading_error">LoadingErrorActivity</string>
 </resources>
